--- a/layouts/Cooks-hub/index.html
+++ b/layouts/Cooks-hub/index.html
@@ -10,6 +10,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700;1,800&display=swap"
         rel="stylesheet">
+        <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <title>Cooks Hub</title>
 </head>
 
@@ -146,11 +147,10 @@
                     </div>
             </div>
         </aside>
-
-        <footer>
-            <div class="flex-container">
-                footer
-            </div>
+        <footer class="flex-container">
+                <i class="fab fa-pinterest"></i>
+                <i class="fab fa-instagram"></i>
+                <i class="fab fa-facebook"></i>
         </footer>
     </div>
 </body>
