--- a/layouts/Cooks-hub/style/index.css
+++ b/layouts/Cooks-hub/style/index.css
@@ -123,16 +123,20 @@ aside img{
     width:100%; height:100%;
     object-fit: cover;
 }
-aside figcaption
+
 
 
 /* ====================FOOTER====================  */
-footer div{
-    background: var(--pink-l);
-}
-body > div > footer > div{
-    height: 100%; width: 100%; 
+footer.flex-container{
+    background:  var(--pink-l);
+    justify-content: center;
 
-    background: var(--pink-l);
+}
+body > div > footer > i.fab{
+    font-size: 4rem;
+}
+footer > *::before{
+    color: var(--pink-d); 
+    margin: auto 2rem; 
 
 }
