--- a/layouts/Cooks-hub/index.html
+++ b/layouts/Cooks-hub/index.html
@@ -30,16 +30,16 @@
         <nav>
             <div class="flex-container">
                 <div>
-                    <h6>DESSERTS SECTION</h6>
+                    <h6><a href="#">DESSERTS SECTION</a></h6>
                 </div>
                 <div>
-                    <h6>BAKERY SECTION</h6>
+                    <h6><a href="#">BAKERY SECTION</a></h6>
                 </div>
                 <div>
-                    <h6>HEALTH SECTION</h6>
+                    <h6><a href="#">HEALTH SECTION</a></h6>
                 </div>
                 <div>
-                    <h6>SMOOTHIES SECTION</h6>
+                    <h6><a href="#">SMOOTHIES SECTION</a></h6>
                 </div>
             </div>
         </nav>
