--- a/layouts/Cooks-hub/style/index.css
+++ b/layouts/Cooks-hub/style/index.css
@@ -1,8 +1,8 @@
 /* ====================GRID CONTAINER====================  */
 .grid-container{
     display: grid;
-    grid-template-columns: 1fr 60% 1fr;
-    grid-template-rows: 10vh 1fr 10vh;
+    grid-template-columns: 1fr 3fr 1fr;
+    grid-template-rows: 10vh auto 10vh;
     place-items:stretch stretch;
     grid-template-areas:
       "header header  header"
