--- a/layouts/project-4-setup/index.html
+++ b/layouts/project-4-setup/index.html
@@ -34,8 +34,41 @@
             <ul>
                 <li>For large desktop screens, 3 columns layout is suitable.</li>
                 <li>As screen size reduces, so will the numbers of columns.</li>
-                <li>For now, only 3 columns layout is covered, <br> 2 and 1 column layout in the next module. </li>
+                <li>This lesson covers 3 columns layout, <br> 2 and 1 column layout in the next module. </li>
             </ul>
+        </section>
+        <section>
+            <h2>grid-container</h2>
+            <ul>
+                <li>First step is setting up the large-scale layout by <br>
+                    defining the <code>grid-container</code>.</li>
+                <li>define the <code>grid-container</code> properties:
+                <br><code class="highlight">grid-template-columns</code><br>
+                <code class="highlight">grid-template-rows</code></li>
+                <br>
+                <li>Use the graph below to guide you set the number of columns/rows and their size.</li>
+            </ul>
+            <img src="./SVG/3-colum-1.svg">
+        </section>
+        <section>
+            <ul>
+                <li>Second step is defining the grid areas by setting up the property: <br>
+                <code class="highlight">grid-template-areas</code></li>
+                <br>
+                <li>Use the graph below to guide you set different areas.</li>
+
+            </ul>
+            <img src="./SVG/3-column-2.svg" >
+        </section>
+        <section>
+            <h2>flex-container</h2>
+            <ul>
+                <li>Each <code>grid-item</code> has a <code>flex-container</code>  </li>
+                <li>Flex defines the structure of smaller scale UI components.</li>
+                <br>
+                <li>Use the graph below to guide you set the layout of each section on the page.</li>
+            </ul>
+            <img src="./SVG/3-column-3.svg" >
         </section>
     </div>
 
