--- a/responsive/project-1/style/index.css
+++ b/responsive/project-1/style/index.css
@@ -12,6 +12,8 @@
 }
 .col-20{
     flex-basis: 20%; 
+    flex-shrink: 0;
+
 }
 .col-fluid{
     flex-grow: 1;
@@ -76,11 +78,14 @@ header h1{
 #item-3 div, #item-5 div{
     width: 100%;
     background: var(--bg-l);
-    padding: 1rem 3rem;
-    margin: 2rem; 
+    padding: 1rem 0;
+    margin-bottom: 1rem ; 
     border-right: 4px solid var(--cyan);
     text-align: right;
 
+}
+#item-3 h4{
+    margin-right: 1rem;
 }
 /* =====================ITEM-4===================== */
 #item-4 div{
@@ -103,10 +108,11 @@ header h1{
 #item-5 div{
     display: flex;
     justify-content: flex-end;
+    align-items: center;
 }
 #item-5 img{
     height:3rem;
-    margin-left:1rem;
+    margin:1rem;
 }
 
 
@@ -114,12 +120,18 @@ header h1{
 
 
 @media only screen and (max-width:700px){
-    section{
+    .flex-container{
         flex-direction: column;
     }
-    .flex-item{
-        flex-grow: 1;
+    section:first-child{
+        flex-direction: column-reverse;
     }
+    #item-2 > *{
+        margin: 1rem auto; 
+    }
+    /* .flex-item{
+        flex-grow: 1;
+    } */
 }
 
 
