--- a/advanced-CSS/transform/style/index.css
+++ b/advanced-CSS/transform/style/index.css
@@ -50,3 +50,8 @@
 #skew{
     transform: skew(20deg , 20deg)
 }
+
+#transform-origin{
+    transform: scale(1.3);
+    transform-origin: left top;
+}
