--- a/animation/concepts/style/index.css
+++ b/animation/concepts/style/index.css
@@ -28,6 +28,11 @@ img{
         left:0; 
         transform: translateX(0%) ;
     }
+    10%{
+        border-radius: 50%; 
+        left:0; 
+        transform: translateX(0%) ;
+    }
     40%{
         border-radius: 0; 
         left:50%; 
