--- a/animation/sandbox/style/style.css
+++ b/animation/sandbox/style/style.css
@@ -22,13 +22,14 @@ html{
 }
 
 body{
-	font-family: 'Lato', sans-serif;
+	font-family: 'Varela Round', sans-serif;
 	background: var(--bg-d); 
 	font-size: 2rem;
+	text-align: center;
 }
 
 /* TYPOGRAPHY  */
-h1{font-size: 2.5rem;}
+h1{font-size: 4rem; color:#FF156D;}
 h3{font-size: 3.5rem;}
 h4{font-size: 3rem;}
 p{font-size: 2.5;}
