--- a/animation/microinteractions/style/style.css
+++ b/animation/microinteractions/style/style.css
@@ -10,7 +10,7 @@
 *,*::before,*::after{
 	padding:0;
 	margin:0;
-	box-sizing: content-box;
+	box-sizing: border-box;
 	list-style: none;      /* remove bullet point from lists */
 	text-decoration:none; /* remove underline from <a> */
 	color: var(--text); 
@@ -21,17 +21,54 @@ html{
 }
 
 body{
-	font-family: 'Lato', sans-serif;
+	font-family: 'Open Sans', sans-serif;
 	background: var(--bg); 
-	font-size: 3rem;
+	font-size: 2.5rem;
+	text-align: center;
 }
 
 /* TYPOGRAPHY  */
-h1{font-size: 2.5rem;}
+h1{
+	font-size: 5rem; 	
+	font-family: 'Comfortaa', cursive;
+	margin: 1rem auto; 
+}
 h3{font-size: 3.5rem;}
 h4{font-size: 3rem;}
-p{font-size: 2.5;}
 li{font-size: 2rem;}
+
+/* ==========SECTIONS========== */
+section{
+	min-height: 80vh; width:100%; 
+	border-radius: 0 0 50px 50px;	
+	position: relative;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+
+}
+section::before{
+	position: absolute;
+	content: "";
+	background: inherit;
+	width: 100%; 
+	height: 60px;
+	top: -60px; 
+	z-index: -1;
+}
+section:nth-child(3n + 1){background: #e1c1c2;}
+section:nth-child(3n + 2){background: #fff }
+section:nth-child(3n + 3){background: #f1eae6;;}
+
+/* ==========CONTAINER========== */
+.container{
+	display:flex;
+	width:70%; 
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+
+}
 
 
 
