--- a/animation/microinteractions/style/index.css
+++ b/animation/microinteractions/style/index.css
@@ -122,6 +122,7 @@
     0%{
         width:0%
     }
+    /* from 6s to 7.5s the progress bar stops growing and sticks to 70% width  */
     60%{
         width:70%
     }
@@ -132,3 +133,68 @@
         width:100%
     }
 }
+
+
+
+
+/* ==========PLAY BUTTON========== */
+#play .btn{
+    height: 60px; width: 250px; 
+    padding: 0 1rem;
+    background: #e1c1c2; 
+    border-radius: 5px;
+    display:flex; 
+    justify-content: space-around;
+    align-items: center;
+    cursor: pointer;
+    transition: all .5s ease;
+    margin-top: 5rem; 
+}
+#play .btn:hover{ background: hsl(358, 28%, 75%);}
+.rect{
+    height:40px; width:40px;
+    position: relative; 
+
+  }
+  .large-line{
+    height: 100%; 
+    width: 10px;
+    border-radius: 20px; 
+    background: #505050; 
+ }
+  .s-line{
+    height: 50%; 
+    background: #505050; 
+    width: 10px; 
+    position: absolute; 
+    right:0; 
+    transition: all .2s linear; 
+  }
+  .s-line.top{
+    top:0; 
+    border-radius: 20px 20px 0 0; 
+  }
+
+  .s-line.bottom{
+    bottom:0; 
+    border-radius: 0 0 20px 20px ; 
+    
+  }
+  #play .text{
+	font-family: 'Comfortaa', cursive;
+      font-weight: 600;
+      font-size: 4.5rem;
+      margin-top:.5rem;
+  }
+
+  .rotate-top{
+    transform-origin: bottom right; 
+    transform: rotate(-62deg) scaleY(2.1) translateX(3px);
+    border-radius: 5px !important;
+  }
+  .rotate-bottom{
+    border-radius: 5px !important; 
+    transform-origin: top right; 
+    transform: rotate(62deg) scaleY(2.1) translateX(3px);
+  }
+
