--- a/animation/microinteractions/style/style.css
+++ b/animation/microinteractions/style/style.css
@@ -39,7 +39,11 @@ li{font-size: 2rem;}
 
 /* ==========SECTIONS========== */
 section{
-	min-height: 80vh; width:100%; 
+	min-height: 80vh;
+	height: fit-content; 
+	padding: 7rem 0;
+	width:100%; 
+	
 	border-radius: 0 0 50px 50px;	
 	position: relative;
 	display: flex;
